fix Wordpress theme overlapsing the modal

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -146,7 +146,7 @@ $modalMinVH:    40vh;
     #lpb-modal {
         display: none;
         position: fixed;
-        z-index: 1;
+        z-index: 100;
         left: 0;
         top: 0;
         width: 100%;
